css/style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');

html {
    scroll-behavior: smooth;
}

body {
    margin-left: 3.8vw;
    margin-right: 3.8vw;
    margin-bottom: 0;
    margin-top: 0;
    font-family: 'Raleway', sans-serif;
    max-width: 1400px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
}

.text-title {
    font-weight: 700;
    font-size: 21.7px;
    line-height: 26px;
    color: black;
}

.text-big-bold {
    font-weight: 700;
    font-size: 18px;
    line-height: 21px;
    color: black;
}

.text-card {
    font-weight: 700;
    font-size: 16px;
    line-height: 19px;
    color: black;
}

.text-card-information {
    font-weight: 400;
    font-size: 14px;
    line-height: 16px;
    color: black;
}

.text-information {
    font-weight: 400;
    font-size: 15.8px;
    line-height: 19px;
    color: black;
}

a {
    text-decoration: none;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.card {
    border-radius: 20px;
    overflow: hidden;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
}

.stars {
    display: flex;
    color: #0065FC;
    font-size: 12px;
}

.stars :nth-child(5) {
    color: #F2F2F2;
}

.text-margin {
    margin-left: 8px;
    margin-right: 8px;
}

.margin-wrapper {
    margin-bottom: 5%;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 30px;
}

.card-list-margin {
    margin-top: 20px;
    margin-bottom: 35px;
}

/*------------------------------------*/

.navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 90px;
}

.nav-logo {
    height: 18px;
}

.links-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 250px;
    height: 100%;
}

.links-container__link {
    transition: .2s;
    padding: 34px 10px 0px 10px;
    border-top: transparent 3px solid;
}

.links-container__link:hover {
    border-color: #0065FC;
}

/*---------------------------------------------------------------------------*/

.location-search {
    display: flex;
    border-radius: 15px;
    overflow: hidden;
    width: fit-content;
}

.location-search--padding {
    padding: 12px;
    border-radius: 0px;
    border: none;
}

.location-search__map {
    font-size: 18px;
    padding-left: 18px;
    padding-right: 18px;
    transition: .2s;
}

.location-search__map:hover {
    cursor: pointer;
}

.location-search__input {
    border: 1px solid #F2F2F2;
    width: clamp(162px, 47vw + 16px, 190px);
}

.location-search__submit {
    background-color: #0065FC;
    color: white;
    transition: .2s;
}

.location-search__submit__classic {
    margin: 0;
}

.location-search__submit__phone {
    display: none;
}

.location-search__submit:hover {
    cursor: pointer;
}

/*---------------------------------------------------------------------------*/

.filters {
    display: flex;
    width: clamp(685px, 86.5vw + 1rem, 800px);
    justify-content: space-between;
    align-items: center;
    margin-top: 26px;
    margin-left: 5px;
}

.text-filters {
    font-weight: 700;
    font-size: 15px;
    line-height: 20px;
    color: black;
}

.filters-list {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
}

.filters__bubble {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    border-radius: 30px;
    height: fit-content;
    padding: 9px 16px;
    border: solid 2px #D9D9D9;
    transition: .2s;
    background-color: white;
}

.filters__bubble:hover {
    background-color: #DEEBFF;
    cursor: pointer;
}

.filters__icon {
    font-size: 17px;
    color: #0065FC;
    margin-right: 10px;
}

/*---------------------------------------------------------------------------*/

.search-information {
    display: flex;
    align-items: center;
    margin-top: 15px;
    margin-bottom: 10px;
}

.search-information__logo {
    height: 20px;
    width: 20px;
    border: 1px solid #D9D9D9;
    border-radius: 50%;
    color: #0065FC;
    margin-left: 5px;
    margin-right: 15px;
    font-size: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}

/*---------------------------------------------------------------------------*/

.results {
    display: flex;
    justify-content: space-between;
}

.accommodation {
    position: relative;
    background-color: #F2F2F2;
    border-radius: 10px;
    width: 66%;
}

.accommodation__list {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;
}

.accommodation-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.accommodation__list__card {
    display: flex;
    flex-direction: column;
    padding: 5px;
    padding-bottom: 12px;
    background-color: white;

}

.accommodation-image {
    object-fit: cover;
    aspect-ratio: 1/.5;
    border-radius: 15px 15px 0px 0px;
    margin-bottom: 8px;
}

.card-line-height {
    margin-top: 0px;
    margin-bottom: 4px;
}

/*---------------------------------------------------------------------------*/

.trendings {
    background-color: #F2F2F2;
    border-radius: 10px;
    overflow: hidden;
    margin-left: 3%;
    width: 33%;
}

.trendings-title {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.chart-blue {
    color: #0065FC;
}

.test {
    height: 80%;
}

.trendings__list {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.trendings__list__card {
    display: flex;
    padding: 5px;
    background-color: white;
}

.trendings-image {
    aspect-ratio: 1/1.05;
    object-fit: cover;
    border-radius: 15px 0px 0px 15px;
    margin-right: 8px;
    width: 110px;
}

.trendings-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 8px 0px;
}

.trendings-content-text {
    display: flex;
    flex-direction: column;
}

/*---------------------------------------------------------------------------*/

.activities {
    display: flex;
    flex-direction: column;
    padding-top: 40px;
    margin-bottom: 40px;
}

.activities-container {
    margin-top: 20px;
    display: flex;
    justify-content: space-between;
}

.activities-card {
    display: flex;
    flex-direction: column;
    width: 23%;
}

.activities-image {
    aspect-ratio: 1/1.25;
    object-fit: cover;
}

.activities-text-content {
    flex: 1 0 auto;
    display: flex;
    align-items: center;
}

.activities__text-margin {
    margin-left: 18px;
    margin-right: 18px;
}

/*---------------------------------------------------------------------------*/

.footer {
    background-color: #F2F2F2;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
    padding: 40px 55px 30px 55px;
}

.text-margin-bottom {
    margin-bottom: 25px;
}

/*---------------------------------------------------------------------------*/

@media (max-width: 992px) {

    body {
        margin-left: 5vw;
        margin-right: 5vw;
    }

    .results {
        flex-direction: column;
    }

    .filters__bubble {
        padding: 9px 14px;
    }

    .accommodation {
        width: 100%;
    }

    .trendings {
        width: 100%;
        margin-left: 0;
        margin-top: 40px;
    }

    .trendings__list {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 20px;
    }

    .trendings-image {
        width: 85px;
        aspect-ratio: 1/1.25;
    }

    .trendings .text-card {
        font-size: 14px;
        line-height: 16px;
    }

    .trendings .text-card-information {
        font-size: 13px;
        line-height: 15px;
    }

    .text-margin {
        margin-left: 3px;
        margin-right: 3px;
    }

    .footer {
        padding: 40px 40px 30px 40px;
    }
}

/*---------------------------------------------------------------------------*/

@media (max-width: 768px) {

    body {
        margin: 0;
    }

    .header,
    .research,
    .accommodation,
    .activities {
        margin: 0px 15px;
    }

    /*NAVIGATION*/

    .navigation {
        flex-direction: column;
        height: 150px;
        justify-content: space-around;
        margin-bottom: 20px;
    }

    nav {
        width: 100%;
    }

    .margin-wrapper {
        margin-left: 15px;
        margin-right: 15px;
    }

    .links-container {
        align-items: center;
        justify-content: space-between;
        width: 100%;
    }

    .links-container li {
        width: 50%;
        display: flex;
        justify-content: center;
    }

    .links-container__link {
        display: flex;
        justify-content: center;
        width: 100%;
        padding-bottom: 15px;
        border-top: none;
        border-bottom: #F2F2F2 3px solid;
    }

    .links-container__link:hover {
        border-color: #0065FC;
    }

    /*RESEARCH*/

    .research {
        padding-top: 20px;
    }

    /*LOCATION-SEARCH*/

    .location-search__submit__classic {
        display: none;
    }

    .location-search__submit__phone {
        display: initial;
        font-size: 17px;
        padding: 0px 5px;
    }

    /*FILTERS*/

    .filters {
        flex-direction: column;
        justify-content: initial;
        align-items: initial;
    }

    .filters-list {
        display: flex;
        justify-content: left;
        flex-wrap: wrap;
        gap: clamp(10px, 2vw + .2rem, 20px);
        width: 90svw;
    }

    .filters__bubble {
        display: flex;
        justify-content: left;
        padding: 12px 12px;
        width: 160px;
    }

    .text-filters {
        font-size: 11px;
    }

    /*RESULTS*/

    .results {
        flex-direction: column-reverse;
    }

    /*TRENDINGS*/

    .trendings {
        margin-top: 0;
    }

    .trendings__list {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }

    .trendings__list__card {
        width: min(82.5vw, 360px);
        height: 120px;
    }

    .trendings-image {
        width: 120px;
    }

    /*ACCOMMODATION*/

    .accommodation {
        margin: 0;
        background-color: white;
    }

    .accommodation__list {
        display: flex;
        flex-direction: column;
    }

    .accommodation__list__card {
        width: min(82.5vw, 360px);
    }

    .accommodation-image {
        aspect-ratio: 1/.35;
    }

    .show-more {
        display: none;
    }

    /*ACTIVITES*/

    .activities {
        margin-top: 40px;
        margin-bottom: 40px;
    }

    .activities-container {
        flex-direction: column;
        gap: 20px;
    }

    .activities-card {
        width: min(85vw, 370px);
    }

    .activities-image {
        aspect-ratio: 1/.5;
    }

    /*FOOTER*/

    .footer {
        display: flex;
        flex-direction: column;
        gap: 50px;
    }

}

